--- a/WISHH/settings/project.json
+++ b/WISHH/settings/project.json
@@ -2,7 +2,8 @@
   "group-list": [
     "default",
     "Player",
-    "Walls"
+    "Walls",
+    "ground"
   ],
   "collision-matrix": [
     [
@@ -11,11 +12,18 @@
     [
       false,
       false,
+      true,
       true
     ],
     [
       false,
       true,
+      false
+    ],
+    [
+      false,
+      true,
+      false,
       false
     ]
   ],
