--- a/WISHH/settings/project.json
+++ b/WISHH/settings/project.json
@@ -5,7 +5,8 @@
     "Walls",
     "ground",
     "enemy",
-    "Players Bullet"
+    "Players Bullet",
+    "Invincible"
   ],
   "collision-matrix": [
     [
@@ -13,6 +14,8 @@
       null,
       true,
       true,
+      false,
+      null,
       false
     ],
     [
@@ -29,22 +32,16 @@
       false,
       null,
       true,
-      true
-    ],
-    [
-      true,
-      true,
-      false,
-      false,
       true,
       true
     ],
     [
-      false,
-      true,
       true,
       true,
       false,
+      false,
+      true,
+      true,
       true
     ],
     [
@@ -52,7 +49,24 @@
       true,
       true,
       true,
+      false,
+      true
+    ],
+    [
+      false,
       true,
+      true,
+      true,
+      true,
+      false
+    ],
+    [
+      false,
+      false,
+      true,
+      true,
+      false,
+      false,
       false
     ]
   ],
