--- a/WISHH/settings/project.json
+++ b/WISHH/settings/project.json
@@ -6,7 +6,8 @@
     "ground",
     "enemy",
     "Players Bullet",
-    "Invincible"
+    "Invincible",
+    "enemyAttackRange"
   ],
   "collision-matrix": [
     [
@@ -14,7 +15,7 @@
       null,
       true,
       true,
-      false,
+      true,
       null,
       false
     ],
@@ -30,7 +31,16 @@
       true,
       true,
       false,
-      null,
+      true,
+      true,
+      true,
+      true
+    ],
+    [
+      true,
+      true,
+      true,
+      true,
       true,
       true,
       true
@@ -38,14 +48,7 @@
     [
       true,
       true,
-      false,
-      false,
       true,
-      true,
-      true
-    ],
-    [
-      false,
       true,
       true,
       true,
@@ -64,6 +67,16 @@
       false,
       false,
       true,
+      true,
+      false,
+      false,
+      false
+    ],
+    [
+      false,
+      false,
+      false,
+      false,
       true,
       false,
       false,
